--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection" content="telephone=no" />
-<title>冬日暖阳发热地板-冬日暖阳发热地板官网，冬日暖阳，发热地板，地暖地板，地热地板，地暖地板二合一，发热地板加盟，发热地板领军品牌。</title>
-<meta name="Keywords" content="冬日暖阳，地暖，地暖地板，发热地板，自热地板，只装地板就有地暖，地暖地板二合一。"/>
-<meta name="Description" content="冬日暖阳发热地板，只装地板就有地暖，地暖、地板二合一，发热快、安装块、节能环保、安全健康。服务热线：400-688-2328。"/>
+<title>派涅尔</title>
+<meta name="Keywords" content="派涅尔"/>
 <meta name="renderer" content="webkit">
-<link href="favicon.ico" rel="shortcut icon">
-<script>
-	var STATIC_URL = "static/index.htm";
-	var GLOBAL_URL = "index.htm";
-	var UPLOAD_URL = "upload/index.htm" ;
-	var SITE_URL = "index.php/index.htm";
-</script>
 <link rel="stylesheet" href="./css/reset.css" type="text/css" media="screen" charset="utf-8">
 <link rel="stylesheet" href="./css/style.css" type="text/css" media="screen" charset="utf-8">
 <link rel="stylesheet" href="./css/animate.css" type="text/css" media="screen" charset="utf-8">
@@ -28,100 +21,91 @@
 <script src="./js/template.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/init.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/ui.js" type="text/javascript" charset="utf-8"></script>
-
-<!--[if IE 6]>
-<script src="http://lvwarm.com/static/js/IE6PNG.js?v=v2" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript">
-	IE6PNG.fix('.png');
-</script>
-<![endif]-->
 </head>
 
 <body>
-
 <div class="loading">
     <img src="./image/loading.gif" width="32" height="32">
 </div>
 
 <div class="header">
 	<div class="header-main w1000">
-		<div class="logo"><a href="index.php"><img src="./image/logo.png" alt="首页" ></a></div>
+		<div class="logo"><a href="index.html"><img src="./image/logo.png" alt="首页" ></a></div>
 		
 		<div class="menub">
 			<b></b>
 			<ul>
 				<li class="ho on">
-					<a href="index.php/about/profile/index.htm" class="btit">关于我们</a>
-					<div class="subnav" style="width:500px;">
-						<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>
-						<a href="index.php/about/culture/index.htm">品牌文化</a><span>·</span>
-						<a href="./about/course.htm">取暖历程</a><span>·</span>
-						<a href="index.php/about/honor/index.htm">荣誉资质</a><span>·</span>
-						<a href="index.php/about/honor#1/index.htm">人才策略</a>
-					</div>
+					<a href="/about/profile/index.htm" class="btit">关于我们</a>
+					<!--<div class="subnav" style="width:500px;">-->
+						<!--<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>-->
+						<!--<a href="index.php/about/culture/index.htm">品牌文化</a><span>·</span>-->
+						<!--<a href="./about/course.htm">取暖历程</a><span>·</span>-->
+						<!--<a href="index.php/about/honor/index.htm">荣誉资质</a><span>·</span>-->
+						<!--<a href="index.php/about/honor#1/index.htm">人才策略</a>-->
+					<!--</div>-->
 				</li>
 				<li class="ho">
 					<a href="index.php/product/advantage/index.htm" class="btit">产品中心</a>
-					<div class="subnav" style="width:500px;">
-						
-						<a href="index.php/product/advantage/index.htm">产品介绍</a><span>·</span>
-						<a href="index.php/product/index.htm">产品展示</a><span>·</span>
-						<a href="index.php/product/detailed/index.htm">安装说明</a>
-                        <!--<a href="http://lvwarm.com/index.php/product/advantage">产品优势</a>-->
-					</div>
+					<!--<div class="subnav" style="width:500px;">-->
+						<!---->
+						<!--<a href="index.php/product/advantage/index.htm">产品介绍</a><span>·</span>-->
+						<!--<a href="index.php/product/index.htm">产品展示</a><span>·</span>-->
+						<!--<a href="index.php/product/detailed/index.htm">安装说明</a>-->
+                        <!--&lt;!&ndash;<a href="http://lvwarm.com/index.php/product/advantage">产品优势</a>&ndash;&gt;-->
+					<!--</div>-->
 				</li>
 				<li class="ho">
-					<a href="index.php/manage/index.htm" class="btit">新闻中心</a>
-					<div class="subnav" style="width:400px;">
-						<a class="first" href="index.php/manage/index.htm">品牌资讯</a><span>·</span>
-						<a href="index.php/manage/33/index.htm">热门观点</a><span>·</span>
-						<a href="index.php/manage/34/index.htm">家居动态</a><span>·</span>
-						<a href="index.php/manage/video/index.htm">精彩视频</a>
-					</div>
+					<a href="index/news/index.html" class="btit">新闻中心</a>
+					<!--<div class="subnav" style="width:400px;">-->
+						<!--<a class="first" href="index.php/manage/index.htm">品牌资讯</a><span>·</span>-->
+						<!--<a href="index.php/manage/33/index.htm">热门观点</a><span>·</span>-->
+						<!--<a href="index.php/manage/34/index.htm">家居动态</a><span>·</span>-->
+						<!--<a href="index.php/manage/video/index.htm">精彩视频</a>-->
+					<!--</div>-->
 				</li>
-				<li class="ho">
-					<a href="index.php/mobile/index.htm" class="btit">招商加盟</a>
-					<div class="subnav" style="width:400px;">
-                        <a class="first" href="index.php/mobile_ACFBB307">加盟优势</a><span>·</span>
-                        <a class="first" href="index.php/mobile_23FC827D">体验中心展示</a><span>·</span>
-                        <a class="first" href="index.php/mobile_9B05D3F3">如何加盟</a><span>·</span>
-                        <a class="first" href="index.php/mobile_4602E361">申请加盟</a>
-					</div> 
-				</li>
-				<li class="ho">
-					<a href="index.php/list/index.htm" class="btit">客户案例</a>
-					 <div class="subnav" style="width:400px;">
-						<a class="first" href="index.php/list/list/6/index.htm">新房安装</a><span>·</span>
-						 <a href="index.php/list/list/7/index.htm">老房改造</a><span>·</span>
-                         <a href="index.php/list/list/8/index.htm">工程案例</a>
-					</div> 
-				</li>
+				<!--<li class="ho">-->
+					<!--<a href="index.php/mobile/index.htm" class="btit">招商加盟</a>-->
+					<!--<div class="subnav" style="width:400px;">-->
+                        <!--<a class="first" href="index.php/mobile_ACFBB307">加盟优势</a><span>·</span>-->
+                        <!--<a class="first" href="index.php/mobile_23FC827D">体验中心展示</a><span>·</span>-->
+                        <!--<a class="first" href="index.php/mobile_9B05D3F3">如何加盟</a><span>·</span>-->
+                        <!--<a class="first" href="index.php/mobile_4602E361">申请加盟</a>-->
+					<!--</div> -->
+				<!--</li>-->
+				<!--<li class="ho">-->
+					<!--<a href="index.php/list/index.htm" class="btit">客户案例</a>-->
+					 <!--<div class="subnav" style="width:400px;">-->
+						<!--<a class="first" href="index.php/list/list/6/index.htm">新房安装</a><span>·</span>-->
+						 <!--<a href="index.php/list/list/7/index.htm">老房改造</a><span>·</span>-->
+                         <!--<a href="index.php/list/list/8/index.htm">工程案例</a>-->
+					<!--</div> -->
+				<!--</li>-->
 				<li class="ho">
 					<a href="index.php/design/index.htm" class="btit">服务中心</a>
-					 <div class="subnav" style="width:400px;left:auto;left:-10px;">
-					<a class="first" href="index.php/design_ACFBB307">服务理念</a><span>·</span>
-						<a href="index.php/design_23FC827D">服务支持</a><span>·</span>
-                         <a href="index.php/design/home/index.htm">家居顾问</a>
-					</div> 
+					 <!--<div class="subnav" style="width:400px;left:auto;left:-10px;">-->
+					<!--<a class="first" href="index.php/design_ACFBB307">服务理念</a><span>·</span>-->
+						<!--<a href="index.php/design_23FC827D">服务支持</a><span>·</span>-->
+                         <!--<a href="index.php/design/home/index.htm">家居顾问</a>-->
+					<!--</div>-->
 				</li>
-				<li class="ho">
-					<a href="index.php/contact/index.htm" class="btit">联系我们</a>
-				</li>
+				<!--<li class="ho">-->
+					<!--<a href="index.php/contact/index.htm" class="btit">联系我们</a>-->
+				<!--</li>-->
 			</ul>
 		</div>
-		<div class="right">
-			<a href="">网上商城</a>
-		</div>
+		<!--<div class="right">-->
+			<!--<a href="">网上商城</a>-->
+		<!--</div>-->
 	</div>
 	<div class="bg"></div>
 </div>
 
 <div class="lxfx">
     <ul>
-        <li><a href="../wpa.qq.com/msgrd_CF7C6B87" target="_black"><div class="leftlx"><i></i><p>QQ咨询</p></div></a></li>
-        <li><a href="javascript:void(0)"><div class="leftlx"><i class="icon-tel"></i><p>400电话</p></div><span>400-688-2328</span></a></li>
-        <li><a href="index.php/contact_ACFBB307" target="_black"><div class="leftlx"><i class="icon-ly"></i><p>在线留言</p></div></a></li>
-        <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信扫一扫</p></div></a>
+        <li><a href="http://wpa.qq.com/msgrd?v=3&uin=871586801&site=qq&menu=yes" target="_black"><div class="leftlx"><i></i><p>QQ咨询</p></div></a></li>
+        <li><a href="javascript:void(0)"><div class="leftlx"><i class="icon-tel"></i><p>咨询电话</p></div><span>0512-67722480</span></a></li>
+        <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信公众号</p></div></a>
 			<div class="ewm"><img src="./image/drny.jpg" width="120" height="120"></div>
 		</li>
         <li><a href="../weibo.com/lvwarm/index.htm" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
@@ -140,12 +124,12 @@
         }
         if(index==1){
             $(this).hover(function(){
-                $(this).stop().animate({marginLeft:"-155px",width:"232px"},600)
+                $(this).stop().animate({marginLeft:"-165px",width:"242px"},600)
             },function(){
                 $(this).stop().animate({marginLeft:"0px",width:"77px"},600)
             })
         }
-        if(index==3){
+        if(index==2){
             $(this).hover(function(){
                 $(this).stop().animate({marginLeft:"-13px",width:"90px"},600,function(){
                     $(".ewm").stop().show()
@@ -162,7 +146,6 @@
 <div class="banner">
 	<ul class="jslist">
 		<li style="background:url(http://lvwarm.com/upload/2015/05/04/143071052893l2fhr.jpg) no-repeat center">
-			<a href="../baidu.com/index.htm" target="_blank"></a>
 			<div class="bannertxt w1000">
 				<img src="static/web/img/home_14_E7A774CF.png" width="734" height="91" class="txt1">
 				<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">
@@ -176,7 +159,6 @@
 			</div>
 		</li>
 		<li style="background:url(http://lvwarm.com/upload/2015/05/04/143071050934n1krp.jpg) no-repeat center">
-			<a ></a>
 			<div class="bannertxt w1000">
 				<img src="static/web/img/home_14_E7A774CF.png" width="734" height="91" class="txt1">
 				<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">
@@ -184,7 +166,6 @@
 			</div>
 		</li>
 		<li style="background:url(http://lvwarm.com/upload/2015/05/04/143071051949qsifk.jpg) no-repeat center">
-			<a href="../baidu.com/index.htm" target="_blank"></a>
 			<div class="bannertxt w1000">
 				<img src="static/web/img/home_14_E7A774CF.png" width="734" height="91" class="txt1">
 				<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">
@@ -192,11 +173,11 @@
 			</div>
 		</li>
 	</ul>
-	<div class="number">
-		<span  class="current" ><i><div class="sz1"></div></i></span>
-		<span ><i><div class="sz2"></div></i></span>
-		<span ><i><div class="sz3"></div></i></span>
-	</div>
+	<!--<div class="number">-->
+		<!--<span  class="current" ><i><div class="sz1"></div></i></span>-->
+		<!--<span ><i><div class="sz2"></div></i></span>-->
+		<!--<span ><i><div class="sz3"></div></i></span>-->
+	<!--</div>-->
 </div>
 
     <div class="i-fi an-i">
@@ -439,106 +420,13 @@
     </div>
 
     <div class="footer clearfix">
-
-	<div class="f-fi w1000 clearfix">
-		<div class="le">
-			<ul>
-				<li class="ho">
-					<a href="index.php/about/profile/index.htm" class="btit">关于我们</a>
-					<div class="subnav">
-						<a href="index.php/about/profile/index.htm">品牌简介</a>
-						<a href="index.php/about/culture/index.htm">品牌文化</a>
-						<a href="index.php/about/course/index.htm">取暖历程</a>
-						<a href="index.php/about/honor/index.htm">荣誉资质</a>
-						<a href="index.php/about/honor#1/index.htm">人才策略</a>
-					</div>
-				</li>
-				<li class="ho">
-					<a href="index.php/product/advantage/index.htm" class="btit">产品中心</a>
-					<div class="subnav">
-						<a href="index.php/product/advantage/index.htm">产品介绍</a>
-						<a href="index.php/product/index.htm">产品展示</a>
-						<a href="index.php/product/detailed/index.htm">安装说明</a>
-						<!--<a href="http://lvwarm.com/index.php/product/advantage">产品优势</a>-->
-					</div>
-				</li>
-				<li class="ho">
-					<a href="index.php/manage/index.htm" class="btit">新闻中心</a>
-					<div class="subnav">
-						<a href="index.php/manage/32/index.htm">品牌资讯</a>
-						<a href="index.php/manage/33/index.htm">热门观点</a>
-						<a href="index.php/manage/34/index.htm">家居动态</a>
-						<a href="index.php/manage/video/index.htm">精彩视频</a>
-					</div> 
-				</li>
-				<li class="ho">
-					<a href="index.php/mobile/index.htm" class="btit">招商加盟</a>
-					<div class="subnav">
-						<a href="index.php/mobile_ACFBB307">加盟优势</a>
-						<a href="index.php/mobile_23FC827D">体验中心展示</a>
-						<a href="index.php/mobile_9B05D3F3">如何加盟</a>
-						<a href="index.php/mobile_4602E361">申请加盟</a>
-					</div> 
-				</li>
-				<li class="ho">
-					<a href="index.php/list/index.htm" class="btit">客户案例</a>
-					 <div class="subnav">
-						<a href="index.php/list/list/6/index.htm">新房安装</a>
-						<a href="index.php/list/list/7/index.htm">老房改造</a>
-						<a href="index.php/list/list/8/index.htm">工程案例</a>
-						<!-- <a href="http://lvwarm.com/index.php/about#4">客户分享</a> -->
-					</div> 
-				</li>
-				<li class="ho">
-					<a href="index.php/design/index.htm" class="btit">服务中心</a>
-					 <div class="subnav">
-						<a href="index.php/design_ACFBB307">服务理念</a>
-						<a href="index.php/design_23FC827D">服务支持</a>
-						<a href="index.php/design/home/index.htm">家居顾问</a>
-					</div>
-				</li>
-			</ul>
-		</div>
-		<div class="map" style="background:url(http://lvwarm.com/static/web/img/home_111.png?v=v2) no-repeat center 75px">
-			<div class="mapb">
-				<div class="tit">浙江省湖州市双林工业区 </div>
-				<div class="tel">400-688-2328</div>
-				<div class="stit">Map</div>
+		<div class="f-se w1000">
+			<div class="le">
+			 <a href="" class="lea">隐私声明</a><a href="" class="lea">友情链接</a><a href="" class="lea">法律声明</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CopyRight 2016&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔工程设备有限公司&nbsp;&nbsp;&nbsp;&nbsp;All Right Reserved&nbsp;&nbsp;&nbsp;&nbsp;苏ICP备xxxxxxx号
 			</div>
 		</div>
 	</div>
-
-	<div class="f-se w1000">
-		<div class="le">
-		<!-- <a href="" class="lea">隐私声明</a><a href="" class="lea">友情链接</a><a href="" class="lea">法律声明</a> -->
-		CopyRight 2015  浙江冬日暖阳电热科技有限公司 All Right Reserved 浙ICP备11053376号
- 		技术支持：<a target="_blank" title="网站建设" href="../bocweb.cn/index.htm">博采网络</a>
-		<script type="text/javascript">
-			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " ../index.htm");
-			document.write(unescape("%3Cspan id='cnzz_stat_icon_1255140712'%3E%3C/span%3E%3Cscript src='"%20+%20cnzz_protocol%20+/index.htm"s95.cnzz.com/stat.php%3Fid%3D1255140712%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
-		</script>
-		</div>
-
-		<style type="text/css">
-				.bdsharebuttonbox a{opacity: 0.5;filter: alpha(opacity=50);}
-				.bdsharebuttonbox a:hover{opacity: 1;filter: alpha(opacity=100);}
-		</style>
-
-		<div class="bdsharebuttonbox">
-			<a title="分享到新浪微博" href="#" class="bds_tsina" data-cmd="tsina" style="background-image: url(http://lvwarm.com/static/web/img/home_119.png?v=v2);width: 27px;height: 27px;padding:0;margin:0 8px 0 0;background-position: 0px center;"></a>
-			<a title="分享到腾讯微博" href="#" class="bds_tqq" data-cmd="tqq" style="background-image: url(http://lvwarm.com/static/web/img/home_119.png?v=v2);width: 27px;height: 27px;padding:0;margin:0 8px 0 0;background-position: -34px center;"></a>
-			<a title="分享到微信" href="#" class="bds_weixin" data-cmd="weixin" style="background-image: url(http://lvwarm.com/static/web/img/home_119.png?v=v2);width: 27px;height: 27px;padding:0;margin:0 8px 0 0;background-position: -72px center;"></a>
-			<a title="分享到QQ好友" href="#" class="bds_sqq" data-cmd="sqq" style="background-image: url(http://lvwarm.com/static/web/img/home_119.png?v=v2);width: 27px;height: 27px;padding:0;margin:0 0px 0 0;background-position: -108px center;"></a>
-		</div>
-
-		<script>
-			window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='../bdimg.share.baidu.com/static/api/js/share_5AE649D3.js'+~(-new Date()/36e5)];
-		</script>
-
-	</div>
-</div>
-
-<div style="float:center; font-size:12px; margin-top:8px; margin-bottom:8px; text-align:center; margin-right:13px; display:none"></div>
 
 <script src="./js/main.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/banner.js" type="text/javascript" charset="utf-8"></script>
