--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信公众号</p></div></a>
 			<div class="ewm"><img src="./image/drny.jpg" width="120" height="120"></div>
 		</li>
-        <li><a href="../weibo.com/lvwarm/index.htm" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
+        <li><a href="http://weibo.com" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
     </ul>
 </div>
 <script>
@@ -185,84 +185,55 @@
         <div class="tocntit">冬日暖阳发热地板</div>
         <div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>
         <div class="i-fib w1000">
-        	<div class="le">
-        	<dl>
-        		<dd class="cpxt" style="background:url(http://lvwarm.com/static/web/img/home_20.jpg?v=v2) no-repeat center"><!-- 250*345 -->
-					<div class="tit">产品介绍</div>
-					<div class="entit"><img src="static/web/img/products_E7A774CF.png" alt="Products" width="167" height="23"></div>
-					<div class="hr"></div>
-					<div class="stit">科技臻品  闪耀全球</div>
-					<a href="index.php/product/advantage/index.htm" class="more"></a>
-        		</dd>
-        		<dd class="cpxl">
-        			<div class="cpxlb" style="background:url(http://lvwarm.com/static/web/img/home_31.jpg?v=v2) no-repeat center">
-					<div class="tit">产品系列</div>
-					<div class="entit"><img src="static/web/img/products_E7A774CF.png" alt="Products" width="167" height="23"></div>
-					<div class="hr"></div>
-					<div class="stit">暖阳如花 欢迎品鉴</div>
-					<a href="index.php/product/index.htm" class="more"></a>
-					</div>
 
-					<ul>
-		        		<li style="background:url(http://lvwarm.com/upload/2015/05/05/1430808074186kyps.jpg) no-repeat center">
-		        			<div class="lstit">暖·国色</div>
-		        			<div class="ltit">名贵树种系列</div>
-		        			<div class="lhr"></div>
-		        			<a href="index.php/product/list/3/index.htm" class="lmore"></a>
-		        		</li>
-		        		<li style="background:url(http://lvwarm.com/upload/2015/05/11/143132698386061z81b.jpg) no-repeat center">
-		        			<div class="lstit">暖·格调</div>
-		        			<div class="ltit">艺术仿古系列</div>
-		        			<div class="lhr"></div>
-		        			<a href="index.php/product/list/4/index.htm" class="lmore"></a>
-		        		</li>
-		        		<li style="background:url(http://lvwarm.com/upload/2015/05/11/14313269428658ll389.jpg) no-repeat center">
-		        			<div class="lstit">暖·简爱</div>
-		        			<div class="ltit">优雅平面系列</div>
-		        			<div class="lhr"></div>
-		        			<a href="index.php/product/list/5/index.htm" class="lmore"></a>
-		        		</li>
-		        	</ul>
-        		</dd>
-        	</dl>
-		        	
-        	</div>
             <div class="ri">
                 <dl>
                     <dd  style="background:url(http://lvwarm.com/static/web/img/home_21-02.jpg?v=v2) no-repeat">
                         <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>值暖</span></div>
-                            <div class="stit">只装地板，就有地暖</div>
+                            <div class="tit"><span>安全</span></div>
+                            <div class="stit">24伏低电压，安全放心</div>
+                        </a>
+                    </dd>
+                    <dd  style="background:url(http://lvwarm.com/static/web/img/home_21-02.jpg?v=v2) no-repeat">
+                        <a href="index.php/product/advantage_ACFBB307">
+                            <div class="tit"><span>节能</span></div>
+                            <div class="stit">高达50%以上的节能</div>
+                        </a>
+                    </dd>
+                    <dd  style="background:url(http://lvwarm.com/static/web/img/home_21-02.jpg?v=v2) no-repeat">
+                        <a href="index.php/product/advantage_ACFBB307">
+                            <div class="tit"><span>超薄</span></div>
+                            <div class="stit">0.5毫米厚度，空间不浪费</div>
                         </a>
                     </dd>
                     <dd style="background:url(http://lvwarm.com/static/web/img/home_21.jpg?v=v2) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>质暖</span></div>
-                            <div class="stit">安全可靠，稳定无忧</div>
+                            <div class="tit"><span>高效</span></div>
+                            <div class="stit">99%转化率，见效快</div>
                         </a>
                     </dd>
                     <dd style="background:url(http://lvwarm.com/static/web/img/home_21-03.jpg?v=v2) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>直暖</span></div>
-                            <div class="stit">即开即热，节能高效</div>
+                            <div class="tit"><span>品牌</span></div>
+                            <div class="stit">德国制造，安全放心</div>
                         </a>
                     </dd>
                     <dd style="background:url(http://lvwarm.com/static/web/img/home_21-05.jpg?v=v2) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>智暖</span></div>
+                            <div class="tit"><span>简易</span></div>
                             <div class="stit">安装便捷，智能温控</div>
                         </a>
                     </dd>
                     <dd style="background:url(http://lvwarm.com/static/web/img/home_21-06.jpg?v=v2) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>只暖</span></div>
-                            <div class="stit">科学采暖，舒适环保</div>
+                            <div class="tit"><span>健康</span></div>
+                            <div class="stit">生命之光，辐射无扬尘</div>
                         </a>
                     </dd>
                     <dd style="background:url(http://lvwarm.com/static/web/img/home_21-04.jpg?v=v2) no-repeat center">
                         <a href="index.php/product/advantage_ACFBB307">
-                            <div class="tit"><span>稚暖</span></div>
-                            <div class="stit">老房改造，轻松升级</div>
+                            <div class="tit"><span>品质</span></div>
+                            <div class="stit">寿命长，无需维护</div>
                         </a>
                     </dd>
                 </dl>
